--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "postcss-preset-env": "^7.7.2",
     "svelte": "^3.49.0",
+    "svelte-navigator": "^3.1.6",
+    "svelte-preprocess": "^4.10.7",
     "vite": "^3.0.0"
   },
-  "dependencies": {
-    "svelte-navigator": "^3.1.6"
-  }
+  "dependencies": {}
 }
