--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.7",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "postcss-load-config": "^4.0.1",
     "postcss-preset-env": "^7.7.2",
     "svelte": "^3.49.0",
