--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "svelte-navigator": "^3.1.6",
     "svelte-preprocess": "^4.10.7",
     "vite": "^3.0.0",
+    "vite-plugin-pwa": "^0.12.3",
     "vite-plugin-svelte-svg-loader": "^0.0.5"
   }
 }
