--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,10 @@
 HOST=0.0.0.0
 PORT=1337
 APP_KEYS=
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+JWT_SECRET=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_AUTH_USER=
+EMAIL_AUTH_PASS=
