--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "postcss-load-config": "^4.0.1",
     "postcss-preset-env": "^7.8.3",
     "svelte": "^3.55.0",
+    "svelte-copy": "^1.3.0",
     "svelte-navigator": "^3.2.2",
     "svelte-preprocess": "^4.10.7",
     "vite": "^3.2.5",
