--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "autoprefixer": "^10.4.13",
     "normalize.css": "^8.0.1",
@@ -23,5 +24,9 @@
     "vite": "^3.2.5",
     "vite-plugin-pwa": "^0.12.8",
     "vite-plugin-svelte-svg-loader": "^0.0.5"
+  },
+  "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "svelte-fa": "^3.0.3"
   }
 }
